# quantumproject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: brand-guide.md  growth-strategy.md  marketing-content.md  quantum-portfolio-analyzer-spec.md  twitter-strategy.md
scripts/: benchmark.py  demo.py  deploy.sh
src/: config.py
src/api/: app.py  auth.py  cache.py  middleware.py  rate_limit.py  routes_auth.py  routes_billing.py
src/mcp/: server.py
src/models/: __init__.py  schemas.py  user.py
src/quantum/: __init__.py  market_data.py  portfolio.py  qaoa.py  router.py  scheduler.py  validation.py
static/: auth.html  dashboard.html  index.html
static/css/: custom.css
static/js/: auth.js  dashboard.js  playground.js
tests/: test_api.py  test_auth_billing.py  test_e2e_client.py  test_mcp_server.py  test_portfolio.py  test_router.py  test_scheduler.py  test_validation.py
