[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-mcp-relayer"
version = "0.1.0"
description = "Quantum computing as MCP tools for AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mcp>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "stripe>=8.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "celery[redis]>=5.4.0",
]

[project.optional-dependencies]
quantum = [
    "pyqpanda>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
